--- a/Feuille_CSS/style.css
+++ b/Feuille_CSS/style.css
@@ -339,9 +339,9 @@ background : url(../image/play1.png)center bottom no-repeat;
 	width:50px;
 	height:50px;
 
-	 filter:sepia(1) blur(1px);
-	 -webkit-filter: sepia(1) blur(1px);
-	 -webkit-transition: all .2s ease-in-out;
+	 filter:sepia(1) blur(1px) reverse(1);
+	 -webkit-filter: sepia(1) blur(1px) reverse(1);
+	 -webkit-transition: all 0.3s ease-in-out;
 	 
 }
 .link img:hover
@@ -370,7 +370,8 @@ background : url(../image/play1.png)center bottom no-repeat;
 	
 	
 	font-family: Impact, fantasy;
-	font-size: 20px;
-	color: #AE8964;
+	font-size: 17px;
+	color: orange;
+	font-style: italic;
 
 }
