--- a/Feuille_CSS/style.css
+++ b/Feuille_CSS/style.css
@@ -339,8 +339,8 @@ background : url(../image/play1.png)center bottom no-repeat;
 	width:50px;
 	height:50px;
 
-	 filter:sepia(1) blur(1px) reverse(1);
-	 -webkit-filter: sepia(1) blur(1px) reverse(1);
+	 filter:sepia(1) blur(1px);
+	 -webkit-filter: sepia(1) blur(1px);
 	 -webkit-transition: all 0.3s ease-in-out;
 	 
 }
